--- a/FakerSpotter/Pages/Index.razor
+++ b/FakerSpotter/Pages/Index.razor
@@ -10,6 +10,9 @@
         <Paragraph>
             It is recommended that you use a mobile (phone) device for a better experience.
         </Paragraph>
-        <Button Color="Color.Primary" Type="ButtonType.Link" To="tutorial">Continue</Button>
+        <Buttons>
+            <Button Color="Color.Primary" Type="ButtonType.Link" To="intro">Continue</Button>
+            <Button Color="Color.Secondary" Type="ButtonType.Link" To="about">About</Button>
+        </Buttons>
     </Jumbotron>
 </Animate>
