--- a/FakerSpotter/_Imports.razor
+++ b/FakerSpotter/_Imports.razor
@@ -15,5 +15,6 @@
 
 @using FakerSpotter
 @using FakerSpotter.Components
+@using FakerSpotter.Components.Questionnaires
 @using FakerSpotter.Core
 @using FakerSpotter.Core.Data
