--- a/FakerSpotter/Components/Questionnaires/StatementPanel.razor
+++ b/FakerSpotter/Components/Questionnaires/StatementPanel.razor
@@ -1,7 +1,5 @@
 ﻿<Title Size="5">@Question.Statement</Title>
-
 <br/>
-
 <ListGroup Mode="ListGroupMode.Selectable">
     <ListGroupItem Color="Color.Light" Clicked="OnFactPicked">Fact</ListGroupItem>
     <ListGroupItem Color="Color.Light" Clicked="OnOpinionPicked">Opinion</ListGroupItem>
@@ -10,22 +8,20 @@
 @code
 {
 
-    [Parameter] public StatementQuestion Question { get; init; }
+    [Parameter] public StatementQuestion Question { get; set; }
     [Parameter] public EventCallback<int> OnComplete { get; set; }
 
     private int Points { get; set; }
 
     private async void OnFactPicked()
     {
-        if (Question.IsFact)
-            Points += 100;
+        Points = Question.IsFact ? 100 : 0;
         await OnComplete.InvokeAsync(Points);
     }
 
     private async void OnOpinionPicked()
     {
-        if (!Question.IsFact)
-            Points += 100;
+        Points = !Question.IsFact ? 100 : 0;
         await OnComplete.InvokeAsync(Points);
     }
 
