--- a/FakerSpotter/Pages/Finish.razor
+++ b/FakerSpotter/Pages/Finish.razor
@@ -15,7 +15,8 @@
         <Figure Size="FigureSize.Is256x256">
             <FigureImage Source="@RewardImageUrl"/>
             <FigureCaption>
-                You have been awarded with <b>@RewardText</b>!
+                <Paragraph>You've accumulated <b>@UserSettings.PointsAccumulated</b> points!</Paragraph>
+                <Paragraph>You have been awarded with <b>@RewardText</b>!</Paragraph>
             </FigureCaption>
         </Figure>
         <Paragraph Margin="Margin.Is4.FromTop">
