--- a/FakerSpotter/_Imports.razor
+++ b/FakerSpotter/_Imports.razor
@@ -12,6 +12,7 @@
 @using BlazorAnimate
 @using Blazored.LocalStorage
 @using Blazorise
+@using Blazorise.Components
 
 @using FakerSpotter
 @using FakerSpotter.Components
