--- a/FakerSpotter/Components/Questionnaires/HeadlineClosedPanel.razor
+++ b/FakerSpotter/Components/Questionnaires/HeadlineClosedPanel.razor
@@ -9,20 +9,16 @@
 {
 
     [Parameter] public HeadlineClosedQuestion Question { get; set; }
-    [Parameter] public EventCallback<int> OnComplete { get; set; }
-
-    private int Points { get; set; }
+    [Parameter] public EventCallback<bool> OnComplete { get; set; }
 
     private async void OnRealPicked()
     {
-        Points = !Question.IsFake ? 100 : 0;
-        await OnComplete.InvokeAsync(Points);
+        await OnComplete.InvokeAsync(!Question.IsFake);
     }
 
     private async void OnFakePicked()
     {
-        Points = Question.IsFake ? 100 : 0;
-        await OnComplete.InvokeAsync(Points);
+        await OnComplete.InvokeAsync(Question.IsFake);
     }
 
 }
