--- a/FakerSpotter/Pages/Leaderboards.razor
+++ b/FakerSpotter/Pages/Leaderboards.razor
@@ -3,6 +3,7 @@
 <Animate Animation="Animations.Fade" Duration="TimeSpan.FromSeconds(2)">
     <Title Size="3" TextAlignment="TextAlignment.Center">Leaderboards</Title>
     <Divider/>
+    <Paragraph>The leaderboards is currently work-in-progress! Sorry for the inconvenience.</Paragraph>
     <Table Hoverable="true">
         <TableHeader>
             <TableRow>
