--- a/FakerSpotter/Pages/Rooms/Room1.razor
+++ b/FakerSpotter/Pages/Rooms/Room1.razor
@@ -1,13 +1,11 @@
 ﻿@page "/room1"
 
-<RoomPanel RoomName="Room 1: Is it a fact or a opinion?" IsCompleted="UserSettings.IsRoomOneCompleted" NextRoomEndpoint="room2">
+<RoomPanel RoomName="@string.Format("Room 1: Is it a fact or a opinion? ({0}/8)", QuestionsAnswered)" IsCompleted="UserSettings.IsRoomOneCompleted" NextRoomEndpoint="room2">
     <RoomContent>
         @QuestionPanel
         <Divider/>
-        <Paragraph>
-            This room is currently incomplete, you may proceed to the next room.
-        </Paragraph>
-        <Button Color="Color.Primary" Clicked="OnContinue">Continue</Button>
+        <Paragraph>In order to pass this room, you must correctly answer 8 questions in a row!</Paragraph>
+        <Button Color="Color.Primary" Clicked="NextRoom">Skip</Button>
     </RoomContent>
 </RoomPanel>
 
@@ -16,7 +14,12 @@
 
     [Inject] private NavigationManager NavigationManager { get; set; }
     [Inject] private HttpClient HttpClient { get; set; }
+    [Inject] private Random Random { get; set; }
 
+    [Inject] private INotificationService NotificationService { get; set; }
+
+    private int PointsScored { get; set; } = 200;
+    private int QuestionsAnswered { get; set; }
     private StatementQuestion[] Questions { get; set; }
     private RenderFragment QuestionPanel { get; set; }
 
@@ -30,27 +33,44 @@
     {
         builder.OpenComponent(0, typeof(StatementPanel));
         builder.AddAttribute(1, "Question", question);
-        builder.AddAttribute(2, "OnComplete", EventCallback.Factory.Create<int>(this, OnQuestionCompleted));
+        builder.AddAttribute(2, "OnComplete", EventCallback.Factory.Create<bool>(this, OnQuestionCompleted));
         builder.CloseComponent();
     };
 
     private void NextQuestion()
     {
-        var random = new Random();
-        var question = Questions[random.Next(Questions.Length)];
+        var question = Questions[Random.Next(Questions.Length)];
         QuestionPanel = BuildQuestion(question);
     }
 
-    private void OnQuestionCompleted(int points)
+    private void NextRoom()
     {
-        UserSettings.PointsAccumulated += points;
-        NextQuestion();
-    }
-
-    private void OnContinue()
-    {
+        UserSettings.PointsAccumulated += PointsScored;
         UserSettings.IsRoomOneCompleted = true;
         NavigationManager.NavigateTo("room2");
+    }
+
+    private void OnQuestionCompleted(bool answeredCorrectly)
+    {
+        if (answeredCorrectly)
+        {
+            QuestionsAnswered++;
+        }
+        else
+        {
+            QuestionsAnswered = 0;
+            PointsScored -= Random.Next(0, 20);
+            if (PointsScored < 100)
+                NextRoom();
+        }
+        if (QuestionsAnswered < 8)
+        {
+            NextQuestion();
+        }
+        else
+        {
+            NextRoom();
+        }
     }
 
 }
