--- a/FakerSpotter/Pages/Rooms/Room2.razor
+++ b/FakerSpotter/Pages/Rooms/Room2.razor
@@ -1,13 +1,11 @@
 ﻿@page "/room2"
 
-<RoomPanel RoomName="Room 2: Spot the fake headline!" IsCompleted="UserSettings.IsRoomTwoCompleted" IsLocked="!UserSettings.IsRoomOneCompleted" NextRoomEndpoint="room3" PreviousRoomEndpoint="room1">
+<RoomPanel RoomName="@string.Format("Room 2: Spot the fake headline! ({0}/5)", QuestionsAnswered)" IsCompleted="UserSettings.IsRoomTwoCompleted" IsLocked="!UserSettings.IsRoomOneCompleted" NextRoomEndpoint="room3" PreviousRoomEndpoint="room1">
     <RoomContent>
         @QuestionPanel
         <Divider/>
-        <Paragraph>
-            This room is currently incomplete, you may proceed to the next room.
-        </Paragraph>
-        <Button Color="Color.Primary" Clicked="OnContinue">Continue</Button>
+        <Paragraph>In order to pass this room, you must correctly answer 5 questions in a row!</Paragraph>
+        <Button Color="Color.Primary" Clicked="NextRoom">Skip</Button>
     </RoomContent>
 </RoomPanel>
 
@@ -16,7 +14,10 @@
 
     [Inject] private NavigationManager NavigationManager { get; set; }
     [Inject] private HttpClient HttpClient { get; set; }
+    [Inject] private Random Random { get; set; }
 
+    private int PointsScored { get; set; } = 300;
+    private int QuestionsAnswered { get; set; }
     private HeadlineQuestions Questions { get; set; }
     private RenderFragment QuestionPanel { get; set; }
 
@@ -30,7 +31,7 @@
     {
         builder.OpenComponent(0, typeof(HeadlineClosedPanel));
         builder.AddAttribute(1, "Question", question);
-        builder.AddAttribute(2, "OnComplete", EventCallback.Factory.Create<int>(this, OnQuestionCompleted));
+        builder.AddAttribute(2, "OnComplete", EventCallback.Factory.Create<bool>(this, OnQuestionCompleted));
         builder.CloseComponent();
     };
 
@@ -38,35 +39,52 @@
     {
         builder.OpenComponent(0, typeof(HeadlineMultipleChoicePanel));
         builder.AddAttribute(1, "Question", question);
-        builder.AddAttribute(2, "OnComplete", EventCallback.Factory.Create<int>(this, OnQuestionCompleted));
+        builder.AddAttribute(2, "OnComplete", EventCallback.Factory.Create<bool>(this, OnQuestionCompleted));
         builder.CloseComponent();
     };
 
     private void NextQuestion()
     {
-        var random = new Random();
-        if (random.Next(0, 2) == 0)
+        if (Random.Next(0, 2) == 0)
         {
-            var closedQuestion = Questions.ClosedQuestions[random.Next(Questions.ClosedQuestions.Length)];
+            var closedQuestion = Questions.ClosedQuestions[Random.Next(Questions.ClosedQuestions.Length)];
             QuestionPanel = BuildClosedQuestion(closedQuestion);
         }
         else
         {
-            var multipleChoiceQuestion = Questions.MultipleChoiceQuestions[random.Next(Questions.MultipleChoiceQuestions.Length)];
+            var multipleChoiceQuestion = Questions.MultipleChoiceQuestions[Random.Next(Questions.MultipleChoiceQuestions.Length)];
             QuestionPanel = BuildMultipleChoiceQuestion(multipleChoiceQuestion);
         }
     }
 
-    private void OnQuestionCompleted(int points)
+    private void NextRoom()
     {
-        UserSettings.PointsAccumulated += points;
-        NextQuestion();
-    }
-
-    private void OnContinue()
-    {
+        UserSettings.PointsAccumulated += PointsScored;
         UserSettings.IsRoomTwoCompleted = true;
         NavigationManager.NavigateTo("room3");
+    }
+
+    private void OnQuestionCompleted(bool answeredCorrectly)
+    {
+        if (answeredCorrectly)
+        {
+            QuestionsAnswered++;
+        }
+        else
+        {
+            QuestionsAnswered = 0;
+            PointsScored -= Random.Next(0, 40);
+            if (PointsScored < 100)
+                NextRoom();
+        }
+        if (QuestionsAnswered < 8)
+        {
+            NextQuestion();
+        }
+        else
+        {
+            NextRoom();
+        }
     }
 
 }
