--- a/FakerSpotter/Pages/Rooms/Room3.razor
+++ b/FakerSpotter/Pages/Rooms/Room3.razor
@@ -2,10 +2,8 @@
 
 <RoomPanel RoomName="Room 3: Spot the fake news!" IsCompleted="UserSettings.IsRoomThreeCompleted" IsLocked="!UserSettings.IsRoomTwoCompleted" NextRoomEndpoint="finish" PreviousRoomEndpoint="room2">
     <RoomContent>
-        <Paragraph>
-            This room is currently incomplete, you may proceed to the next room.
-        </Paragraph>
-        <Button Color="Color.Primary" Clicked="OnContinue">Continue</Button>
+        <Paragraph>In order to pass this room, you must correctly answer 3 questions in a row!</Paragraph>
+        <Button Color="Color.Primary" Clicked="OnSkip">Skip</Button>
     </RoomContent>
 </RoomPanel>
 
@@ -13,9 +11,17 @@
 {
 
     [Inject] private NavigationManager NavigationManager { get; set; }
+    [Inject] private HttpClient HttpClient { get; set; }
+    [Inject] private Random Random { get; set; }
 
-    private void OnContinue()
+    private int PointsScored { get; set; } = 500;
+    private int QuestionsAnswered { get; set; }
+    private HeadlineQuestions Questions { get; set; }
+    private RenderFragment QuestionPanel { get; set; }
+
+    private void OnSkip()
     {
+        UserSettings.PointsAccumulated += PointsScored;
         UserSettings.IsRoomThreeCompleted = true;
         NavigationManager.NavigateTo("finish");
     }
