--- a/FakerSpotter/Pages/Rooms/Room3.razor
+++ b/FakerSpotter/Pages/Rooms/Room3.razor
@@ -2,10 +2,7 @@
 
 <RoomPanel RoomName="@string.Format("Room 3: Spot the fake news! ({0}/3)", QuestionsAnswered)" IsCompleted="UserSettings.IsRoomThreeCompleted" IsLocked="!UserSettings.IsRoomTwoCompleted" NextRoomEndpoint="finish" PreviousRoomEndpoint="room2">
     <RoomContent>
-        COMING SOON
-        <Divider/>
-        <Paragraph>In order to pass this room, you must correctly answer 3 questions in a row!</Paragraph>
-        <Button Color="Color.Primary" Clicked="NextRoom">Skip</Button>
+        @QuestionPanel
     </RoomContent>
 </RoomPanel>
 
@@ -36,7 +33,7 @@
         else
         {
             QuestionsAnswered = 0;
-            PointsScored -= Random.Next(0, 20);
+            PointsScored -= Random.Next(0, 100);
             if (PointsScored < 100)
                 NextRoom();
         }
@@ -52,17 +49,16 @@
 
     private RenderFragment BuildQuestion(NewsQuestion question) => builder =>
     {
-        /*
         builder.OpenComponent(0, typeof(NewsPanel));
         builder.AddAttribute(1, "Question", question);
         builder.AddAttribute(2, "OnComplete", EventCallback.Factory.Create<bool>(this, OnQuestionCompleted));
         builder.CloseComponent();
-        */
     };
 
     private void NextQuestion()
     {
-        // TODO
+        var question = Questions[Random.Next(Questions.Length)];
+        QuestionPanel = BuildQuestion(question);
     }
 
     private void NextRoom()
