--- a/FakerSpotter/Components/Questionnaires/NewsPanel.razor
+++ b/FakerSpotter/Components/Questionnaires/NewsPanel.razor
@@ -1,6 +1,4 @@
-﻿<div style="text-align: center;">
-    <img src="@Question.ImageUrl" width="300"/>
-</div>
+﻿<img src="@Question.ImageUrl" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
 <br/>
 <div style="text-align: center;">
     <Title Size="5">@Question.Headline</Title>
@@ -8,23 +6,43 @@
 </div>
 <br/>
 <ListGroup Mode="ListGroupMode.Selectable">
-    <ListGroupItem Color="Color.Light" Clicked="OnRealPicked">Real News</ListGroupItem>
-    <ListGroupItem Color="Color.Light" Clicked="OnFakePicked">Fake News</ListGroupItem>
+    <ListGroupItem Color="@RealOptionColor" Clicked="OnRealPicked">Real News</ListGroupItem>
+    <ListGroupItem Color="@FakeOptionColor" Clicked="OnFakePicked">Fake News</ListGroupItem>
 </ListGroup>
 
 @code
 {
 
-    [Parameter] public NewsQuestion Question { get; set; }
+    private NewsQuestion _question;
+
+    [Parameter]
+    public NewsQuestion Question
+    {
+        get => _question;
+        set
+        {
+            RealOptionColor = Color.Light;
+            FakeOptionColor = Color.Light;
+            _question = value;
+        }
+    }
+
     [Parameter] public EventCallback<bool> OnComplete { get; set; }
+
+    private Color RealOptionColor { get; set; }
+    private Color FakeOptionColor { get; set; }
 
     private async void OnRealPicked()
     {
+        RealOptionColor = !Question.IsFake ? Color.Success : Color.Danger;
+        await Task.Delay(1000);
         await OnComplete.InvokeAsync(!Question.IsFake);
     }
 
     private async void OnFakePicked()
     {
+        FakeOptionColor = Question.IsFake ? Color.Success : Color.Danger;
+        await Task.Delay(1000);
         await OnComplete.InvokeAsync(Question.IsFake);
     }
 
