--- a/FakerSpotter/Pages/Leaderboards.razor
+++ b/FakerSpotter/Pages/Leaderboards.razor
@@ -3,7 +3,8 @@
 <Animate Animation="Animations.Fade" Duration="TimeSpan.FromSeconds(2)">
     <Title Size="3" TextAlignment="TextAlignment.Center">Leaderboards</Title>
     <Divider/>
-    <Paragraph>The leaderboards is currently work-in-progress! Sorry for the inconvenience.</Paragraph>
+    <Paragraph TextAlignment="TextAlignment.Center">The leaderboards is currently unavailable.</Paragraph>
+    <!--
     <Table Hoverable="true">
         <TableHeader>
             <TableRow>
@@ -35,4 +36,5 @@
             </TableRow>
         </TableBody>
     </Table>
+    -->
 </Animate>
