--- a/FakerSpotter/Pages/Index.razor
+++ b/FakerSpotter/Pages/Index.razor
@@ -4,7 +4,7 @@
     <Jumbotron Background="Background.Light" Padding="Padding.Is4">
         <JumbotronTitle Size="JumbotronTitleSize.Is4">FakerSpotter</JumbotronTitle>
         <JumbotronSubtitle>
-            Please note that this is only a prototype, some features are not final and may experience major changes in the future.
+            A cyberwellness digital toolkit for learning on how to protect yourself from fake news!
         </JumbotronSubtitle>
         <Divider/>
         <Paragraph>
