--- a/FakerSpotter/Pages/Finish.razor
+++ b/FakerSpotter/Pages/Finish.razor
@@ -13,15 +13,14 @@
     <Container TextAlignment="TextAlignment.Center">
         <Title Size="3" TextAlignment="TextAlignment.Center">Congratulations!</Title>
         <Figure Size="FigureSize.Is256x256">
-            <FigureImage Source="@RewardImageUrl"/>
+            <FigureImage Source="@RewardImageUrl" />
             <FigureCaption>
                 <Paragraph>You've accumulated <b>@UserSettings.PointsAccumulated</b> points!</Paragraph>
                 <Paragraph>You have been awarded with <b>@RewardText</b>!</Paragraph>
             </FigureCaption>
         </Figure>
-        <Paragraph Margin="Margin.Is4.FromTop">
-            <Button Color="Color.Primary" Clicked="OnRestart">Restart</Button>
-        </Paragraph>
+        <Paragraph Margin="Margin.Is4.FromTop">@BottomLineText</Paragraph>
+        <Button Color="Color.Primary" Clicked="OnRestart">Restart</Button>
     </Container>
 </Animate>
 
@@ -33,6 +32,7 @@
 
     private string RewardImageUrl { get; set; }
     private string RewardText { get; set; }
+    private string BottomLineText { get; set; }
 
     protected override void OnInitialized()
     {
@@ -42,18 +42,22 @@
             case >= 800:
                 RewardImageUrl = "assets/images/awards/champion.svg";
                 RewardText = "Cyberwellness Champion";
+                BottomLineText = "You are a pro in identifying fake news!";
                 break;
             case >= 600:
                 RewardImageUrl = "assets/images/awards/master.svg";
                 RewardText = "Cyberwellness Master";
+                BottomLineText = "You are almost there to becoming a pro!";
                 break;
             case >= 400:
                 RewardImageUrl = "assets/images/awards/apprentice.svg";
                 RewardText = "Cyberwellness Apprentice";
+                BottomLineText = "You need to train yourself harder!";
                 break;
             default:
                 RewardImageUrl = "assets/images/awards/novice.svg";
                 RewardText = "Cyberwellness Novice";
+                BottomLineText = "You really need to train yourself much harder!";
                 break;
         }
     }
