--- a/FakerSpotter/Pages/Rooms/Room2.razor
+++ b/FakerSpotter/Pages/Rooms/Room2.razor
@@ -15,12 +15,10 @@
 
     private int PointsScored { get; set; } = 200;
     private int QuestionsAnswered { get; set; }
-    private HeadlineQuestions Questions { get; set; }
     private RenderFragment QuestionPanel { get; set; }
 
     protected override void OnInitialized()
     {
-        Questions = GlobalVariables.HeadlineQuestions;
         NextQuestion();
     }
 
@@ -67,12 +65,12 @@
     {
         if (Random.Next(0, 2) == 0)
         {
-            var closedQuestion = Questions.ClosedQuestions[Random.Next(Questions.ClosedQuestions.Length)];
+            var closedQuestion = GlobalVariables.HeadlineQuestions.ClosedQuestions[Random.Next(GlobalVariables.HeadlineQuestions.ClosedQuestions.Length)];
             QuestionPanel = BuildClosedQuestion(closedQuestion);
         }
         else
         {
-            var multipleChoiceQuestion = Questions.MultipleChoiceQuestions[Random.Next(Questions.MultipleChoiceQuestions.Length)];
+            var multipleChoiceQuestion = GlobalVariables.HeadlineQuestions.MultipleChoiceQuestions[Random.Next(GlobalVariables.HeadlineQuestions.MultipleChoiceQuestions.Length)];
             QuestionPanel = BuildMultipleChoiceQuestion(multipleChoiceQuestion);
         }
     }
