--- a/FakerSpotter/Components/Questionnaires/HeadlineClosedPanel.razor
+++ b/FakerSpotter/Components/Questionnaires/HeadlineClosedPanel.razor
@@ -16,6 +16,7 @@
         get => _question;
         set
         {
+            IsCompleted = false;
             RealOptionColor = Color.Light;
             FakeOptionColor = Color.Light;
             _question = value;
@@ -24,19 +25,26 @@
 
     [Parameter] public EventCallback<bool> OnComplete { get; set; }
 
+    private bool IsCompleted { get; set; }
     private Color RealOptionColor { get; set; }
     private Color FakeOptionColor { get; set; }
 
     private async void OnRealPicked()
     {
+        if (IsCompleted)
+            return;
         RealOptionColor = !Question.IsFake ? Color.Success : Color.Danger;
+        IsCompleted = true;
         await Task.Delay(1000);
         await OnComplete.InvokeAsync(!Question.IsFake);
     }
 
     private async void OnFakePicked()
     {
+        if (IsCompleted)
+            return;
         FakeOptionColor = Question.IsFake ? Color.Success : Color.Danger;
+        IsCompleted = true;
         await Task.Delay(1000);
         await OnComplete.InvokeAsync(Question.IsFake);
     }
