--- a/FakerSpotter/Components/Questionnaires/StatementPanel.razor
+++ b/FakerSpotter/Components/Questionnaires/StatementPanel.razor
@@ -16,6 +16,7 @@
         get => _question;
         set
         {
+            IsCompleted = false;
             FactOptionColor = Color.Light;
             OpinionOptionColor = Color.Light;
             _question = value;
@@ -24,19 +25,26 @@
 
     [Parameter] public EventCallback<bool> OnComplete { get; set; }
 
+    private bool IsCompleted { get; set; }
     private Color FactOptionColor { get; set; }
     private Color OpinionOptionColor { get; set; }
 
     private async void OnFactPicked()
     {
+        if (IsCompleted)
+            return;
         FactOptionColor = Question.IsFact ? Color.Success : Color.Danger;
+        IsCompleted = true;
         await Task.Delay(1000);
         await OnComplete.InvokeAsync(Question.IsFact);
     }
 
     private async void OnOpinionPicked()
     {
+        if (IsCompleted)
+            return;
         OpinionOptionColor = !Question.IsFact ? Color.Success : Color.Danger;
+        IsCompleted = true;
         await Task.Delay(1000);
         await OnComplete.InvokeAsync(!Question.IsFact);
     }
