--- a/FakerSpotter/Components/RoomPanel.razor
+++ b/FakerSpotter/Components/RoomPanel.razor
@@ -10,7 +10,7 @@
             {
                 <Alert Color="Color.Success" Visible="true">
                     <AlertMessage>Completed</AlertMessage>
-                    <AlertDescription>This room is already completed, proceed to the <Blazorise.Link To="@NextRoomEndpoint">next room</Blazorise.Link>.</AlertDescription>
+                    <AlertDescription>This room is already completed, proceed to the <a href="@NextRoomEndpoint">next room</a>.</AlertDescription>
                 </Alert>
                 return;
             }
@@ -18,7 +18,7 @@
             {
                 <Alert Color="Color.Danger" Visible="true">
                     <AlertMessage>Locked</AlertMessage>
-                    <AlertDescription>This room is locked until the <Blazorise.Link To="@PreviousRoomEndpoint">previous room</Blazorise.Link> is completed.</AlertDescription>
+                    <AlertDescription>This room is locked until the <a href="@PreviousRoomEndpoint">previous room</a> is completed.</AlertDescription>
                 </Alert>
                 return;
             }
