--- a/FakerSpotter/Pages/Rooms/Room3.razor
+++ b/FakerSpotter/Pages/Rooms/Room3.razor
@@ -9,6 +9,7 @@
 @code
 {
 
+    [Inject] private IAnalytics Analytics { get; set; }
     [Inject] private NavigationManager NavigationManager { get; set; }
     [Inject] private HttpClient HttpClient { get; set; }
     [Inject] private Random Random { get; set; }
@@ -61,6 +62,7 @@
 
     private void NextRoom()
     {
+        Analytics.TrackEvent("room3_completed", Points);
         UserSettings.PointsAccumulated += Points;
         UserSettings.IsRoomThreeCompleted = true;
         NavigationManager.NavigateTo("finish");
