--- a/FakerSpotter/Pages/Finish.razor
+++ b/FakerSpotter/Pages/Finish.razor
@@ -1,6 +1,6 @@
 ﻿@page "/finish"
 
-@if (!(UserSettings.IsRoomOneCompleted && UserSettings.IsRoomTwoCompleted && UserSettings.IsRoomThreeCompleted))
+@if (IsLocked)
 {
     <Alert Color="Color.Danger" Visible="true">
         <AlertMessage>Locked</AlertMessage>
@@ -29,30 +29,38 @@
 @code
 {
 
-    [Inject]
-    private NavigationManager NavigationManager { get; set; }
+    [Inject] private IAnalytics Analytics { get; set; }
+    [Inject] private NavigationManager NavigationManager { get; set; }
+
+    private bool IsLocked => !(UserSettings.IsRoomOneCompleted && UserSettings.IsRoomTwoCompleted && UserSettings.IsRoomThreeCompleted);
 
     private string RewardImageUrl { get; set; }
     private string RewardText { get; set; }
 
     protected override void OnInitialized()
     {
-        base.OnInitialized();
-        switch (UserSettings.PointsAccumulated)
+        if (IsLocked)
+            return;
+        var points = UserSettings.PointsAccumulated;
+        switch (points)
         {
             case >= 800:
+                Analytics.TrackEvent("obtained_champion", points);
                 RewardImageUrl = "assets/images/awards/champion.svg";
                 RewardText = "Cyberwellness Champion";
                 break;
             case >= 600:
+                Analytics.TrackEvent("obtained_master", points);
                 RewardImageUrl = "assets/images/awards/master.svg";
                 RewardText = "Cyberwellness Master";
                 break;
             case >= 400:
+                Analytics.TrackEvent("obtained_apprentice", points);
                 RewardImageUrl = "assets/images/awards/apprentice.svg";
                 RewardText = "Cyberwellness Apprentice";
                 break;
             default:
+                Analytics.TrackEvent("obtained_novice", points);
                 RewardImageUrl = "assets/images/awards/novice.svg";
                 RewardText = "Cyberwellness Novice";
                 break;
