--- a/FakerSpotter/_Imports.razor
+++ b/FakerSpotter/_Imports.razor
@@ -10,6 +10,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 
+@using Blazor.Analytics
+@using Blazor.Analytics.Components
 @using BlazorAnimate
 @using Blazored.LocalStorage
 @using Blazorise
